2006-01-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/PopupFactory.java
	(getPopup): If there is no Swing root found in any way, use a
	heavyweight popup. This is useful for mixed Swing/AWT GUIs, or
	for the Swing AWT peers.

2006-01-20  Tom Tromey  <tromey@redhat.com>

	* gnu/java/net/protocol/http/HTTPURLConnection.java (connect):
	Read response body for redirect.

2006-01-20  Chris Burdess  <dog@gnu.org>

	* gnu/java/net/protocol/http/HTTPURLConnection.java: Don't follow
	  redirects on 304.

2006-01-20  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java
	(pad): Removed, not needed.
	(printElements): Likewise.
	(printEdit): Likewise.

2006-01-20  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/DefaultFormatter.java
	(DefaultFormatter): Don't set a value class.

2006-01-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/DefaultCellEditor.java: Commented.

2006-01-19  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JOptionPane.java
	Added cast to Frame for JDialog constructor.

2006-01-19  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JWindow.java
	(JWindow(Window)): Fixed to accept null owner argument.
	(JWindow(Window,GraphicsConfiguration)): Fixed to accept null
	owner argument.
	* javax/swing/SwingUtilities.java
	(getOwnerFrame): Owner parameter and return value are fixed to
	be of type Window for compatibity with the above JWindow
	constructor.
	* javax/swing/JDialog.java
	(JDialog): Added cast to Frame to make sure the correct constructor
	is called.
	* javax/swing/JFileChooser.java
	(createDialog): Added cast to Frame for JDialog constructor.

2006-01-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/JTable.java (rowAtPoint): Rewritten.

2006-01-19  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JWindow.java: Added API docs to the constructors.

2006-01-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/JTable.java: Commenting method headers.